@@ -253,6 +253,12 @@ if [[ $rpmver -ge 40800 ]] ; then # >= 4.8
     s|^make install DESTDIR=\\\$RPM_BUILD_ROOT|%make_install|Mg
 "
 fi
+if [[ $rpmver -ge 41100 ]] ; then # >= 4.11
+    # filter unnecessary %license availability detection
+    specfilter+="
+    s|^%\\{!\\?_licensedir:%global license %%doc\\}\\n||Mg
+"
+fi
 if [[ $rpmver -ge 41200 ]] ; then # >= 4.12
     # use %make_build instead of make %{?_smp_mflags}
     specfilter+="
