@@ -45,6 +45,8 @@ rm -rf $RPM_BUILD_ROOT
 
 
 %files
+%{!?_licensedir:%global license %%doc}
+%license add-license-file-here
 %doc add-docs-here
 # For noarch packages: ruby_sitelib
 %{ruby_sitelib}/*
